--- a/profile_page.html
+++ b/profile_page.html
@@ -1,6 +1,20 @@
 <html>
 
-<head>
+<head><style>
+    h1 {
+        background-color: lightblue;
+        color: blue;
+    }
+
+    h2 {
+        background-color: lightgreen;
+        color: green;
+    }
+    .text {
+        color: red;
+        font-weight: bold;
+    }
+</style>
     <title>Profile Page</title>
 </head>
 
@@ -11,8 +25,8 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/uLEWtsmyark?si=91My4gIKKGeGr6YJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br>
     <h2>
-        <a href="https://www.youtube.com/watch?v=uLEWtsmyark">Watch on YouTube</a><br>
-        <a href="index.html">Back to Index</a>
+        <a class="text" href="https://www.youtube.com/watch?v=uLEWtsmyark">Watch on YouTube</a><br>
+        <a class="text" href="index.html">Back to Index</a>
     </h2>
 </body>
 
