update input styling

--- a/css_font_control_page.html
+++ b/css_font_control_page.html
@@ -4,6 +4,9 @@
             border-style: solid;
             border-color: black;
         }
+        input {
+            width: 300px;
+        }
     </style>
         <title>CSS Font Control Page</title>
     </head>
