add hyperlink to go back to index page

--- a/css_font_control_page.html
+++ b/css_font_control_page.html
@@ -16,7 +16,9 @@
             <span id="dummyText">This is the CSS Font Control Page. With this dummy paragraph, the text field 
             below can be used to test and accept RGB color values for this paragraph. We love EECS 348!</span> <br>
             <input class="color_input" type="text" id="colorInput" placeholder="Enter RGB color value rgb(r, g, b): ">
-            <input class="width_input" type="text" id="widthInput" placeholder="Enter width value (px) for the border">
+            <input class="width_input" type="text" id="widthInput" placeholder="Enter width value (px) for the border"> <br>
+
+            <a href="index.html">Back to Index</a>
         </h1>
         <script>
             const colorInput = document.getElementById('colorInput');
