--- a/javascript_password_page.html
+++ b/javascript_password_page.html
@@ -11,7 +11,9 @@
         <p>Please re-enter to confirm your password:</p>
         <input type="password" id="secondPasswordInput" placeholder="Enter to confirm password">
         
-        <button onclick="checkPassword()">Submit</button>
+        <button onclick="checkPassword()">Submit</button><br>
+
+        <a href="index.html">Back to Index</a>
 
         <script>
             function checkPassword() {
