--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="profile_page.html">Profile Page</a> <br>
     <a href="css_font_control_page.html">CSS Font Control Page</a> <br>
     <a href="javascript_password_page.html">JavaScript Password Page</a> <br>
-    <a href="php_multiplication_page.html">PHP Multiplication Page</a> <br>
+    <a href="php_multiplication_page.php">PHP Multiplication Page</a> <br>
 </body>
 
 </html>
