add css style sheet and update html files to link to it

--- a/css_font_control_page.html
+++ b/css_font_control_page.html
@@ -1,14 +1,7 @@
 <html>
-    <head><style>
-        h1 {
-            border-style: solid;
-            border-color: black;
-        }
-        input {
-            width: 300px;
-        }
-    </style>
+    <head>
         <title>CSS Font Control Page</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
