--- a/javascript_password_page.html
+++ b/javascript_password_page.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Password Verification Page</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
