--- a/profile_page.html
+++ b/profile_page.html
@@ -1,21 +1,8 @@
 <html>
 
-<head><style>
-    h1 {
-        background-color: lightblue;
-        color: blue;
-    }
-
-    h2 {
-        background-color: lightgreen;
-        color: green;
-    }
-    .text {
-        color: red;
-        font-weight: bold;
-    }
-</style>
+<head>
     <title>Profile Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
